# DocAtlas

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCMANCER_PRODUCT_BRIEF.md  PR1_SUMMARY.md  PR3_EXACT_VERSION_REPORT.md  PR4_PROGRESS_REPORT.md  PR4_ROOT_CAUSE_ANALYSIS.md  README.md  ROADMAP_PROMPTS.md  SKILL.md  docatlas.project-docs.yaml  docmancer.docs.yaml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
arhive/: 01-agent-mcp-workflow.md  01_agent_proof_mcp_docs_ux.md  01_project_docs_onboarding_overview.md  02-source-taxonomy.md  02_reason_codes_and_next_actions.md  03-documentation-index.md  03_product_positioning.md  03_tool_flow_and_agent_contract.md  04-curated-dependency-docs.md  04_architecture_doc_remediation.md  05-stale-and-ignored-sources.md  05_dependency_docs_prefetch.md  06-verification-loop.md  06_bootstrap_project_docs.md  07_tests_and_acceptance.md  08_next_wedge_project_docs.md  09_riverpod_context7_benchmark_followups.md  10_public_docs_quality_lane.md  11_public_docs_regression_gate.md  12_context7_snapshot_benchmark.md  13_snippet_aware_ranking.md  14_pub_dartdoc_exact_version_benchmark.md  15_cargo_docsrs_exact_version_benchmark.md  16_forbidden_version_scoring.md  17_cross_index_project_library_retrieval.md  18_mcp_cli_explainability.md  19_qdrant_version_warning_policy.md  20_context7_replacement_strategy.md  21_trusted_context_contract.md  22_get_project_context_mvp.md  23_source_resolution_and_rejection.md  24_exact_version_and_project_context_benchmarks.md  25_snippet_and_explain_context.md  26_platform_hardening_after_wedge.md  README.md
doc-atlas/: AGENTS.md  docmancer.yaml  pyproject.toml
docmancer/: agent.py  support_policy.py  support_surfaces.json
docs/: AGENT_DOCS_WORKFLOW.md  DOCMANCER_PRODUCT_BRIEF.md  INDEX.md  PROJECT_MAP.md  RELEASE_CHECKLIST.md  capabilities.md  change-aware-docs.md  context7-docmancer-comparison.md  kotlin-live-smoke.md  mcp-docs-server.md  one-call-agent-loop.md  product-scope.md  project-docs-demo.md  project-docs-mcp-workflow.md  support-surface-policy.md
eval/: answer_quality_gate.py  answer_quality_runner.py  benchmark_context7.py  click_golden.yaml  context7_benchmark_plan.md  evidence_selection_quality.py  flutter_bloc_golden.yaml  live_mcp_context7_benchmark.py  parent_child_index_grid.py  project_docs_golden.yaml  (+6 more)
(+1152 files in other folders)
