[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "doc-atlas"
dynamic = ["version"]
description = "Local, version-aware documentation runtime for coding agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "filelock>=3.0.0",
    "trafilatura>=2.0.0",
    "markdownify>=0.13.0",
    "w3lib>=2.0.0",
    "ultimate-sitemap-parser>=0.12",
    "beautifulsoup4>=4.12.0",
    "jsonschema>=4.0.0",
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.0",
    "qdrant-client>=1.10.0",
    "fastembed>=0.4.0",
    "charset-normalizer>=3.3.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
crawl4ai = ["crawl4ai>=0.4.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
embeddings-voyage = ["voyageai>=0.2.0"]
embeddings-openai = ["openai>=1.0.0"]
embeddings-cohere = ["cohere>=5.0.0"]

[project.scripts]
"doc-atlas" = "docmancer.cli.__main__:cli"

[project.urls]
Homepage = "https://github.com/Vanilla1999/DocAtlas"
Repository = "https://github.com/Vanilla1999/DocAtlas"
Documentation = "https://github.com/Vanilla1999/DocAtlas/tree/main/wiki"
Issues = "https://github.com/Vanilla1999/DocAtlas/issues"
Changelog = "https://github.com/Vanilla1999/DocAtlas/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "docmancer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["docmancer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live/integration quality checks runnable with pytest tests/docs/test_project_context_live_quality.py -m integration",
]
